updates mid March 2020

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -94,7 +94,7 @@ bookmarks, colorlinks, breaklinks,
 {\Huge Anna Xambó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[0.9cm]
 \emph{Senior Lecturer in Music and Audio Technology}\\
-School of Computer Science and Informatics\\
+Leicester Media School\\
 Faculty of Computing, Engineering and Media\\
 De Montfort University (DMU)\\
 Clephan Building \\
@@ -108,7 +108,6 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 \section*{Current Academic Roles}
 ---\emph{Senior Lecturer in Music and Audio Technology}, School of Computer Science and Informatics, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
----\emph{Program Co-Chair of the International Conference on Live Interfaces 2020}, Department of Music, NTNU.\\
 ---\emph{Poster Chair of the 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\
 ---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
 ---\emph{Programme Committee Member}, Tenth Workshop on Ubiquitous Music, Porto Seguro, Brazil.
@@ -163,7 +162,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %%\hrule
 \section*{Employment}
 \noindent
-\years{01/2020--present}\textsc{Senior Lecturer in Music and Audio Technology}. School of Computer Science and Informatics, Faculty of Computing, Engineering and Media, DMU. \\
+\years{01/2020--present}\textsc{Senior Lecturer in Music and Audio Technology}. Leicester Media School, Faculty of Computing, Engineering and Media, DMU. \\
 \years{08/2018--12/2019}\textsc{Associate Professor in Music Technology}. Department of Music, NTNU. \\
 \years{08/2018--2019}\textsc{Visiting Lecturer}. C4DM, School of EECS, QMUL. \\
 \years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. C4DM, School of EECS, QMUL. \\
@@ -207,6 +206,15 @@ Role: Creator \& Director.
 \noindent
 
 \subsection*{Principal Investigator}
+
+\years{04/2020-12/2020}\textsc{Human Data Interaction / EPSRC grant} \\
+Funding body: EPSRC. \\
+Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
+Role: PI. \\
+Collaborators: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; Iklectik; PHONOS; L’Ull Cec. \\
+Total Euro Amount: 10,000 \pounds
+%Candidate’s Share: 
+
 
 \years{11/2003-10/2004}\textsc{Teaching innovation project grant} \\
 Funding body: Fundació Caixa de Sabadell. \\
@@ -293,7 +301,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Books}
 \noindent
 
-\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (in preparation). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
+\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2019). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
 \years{2019}Queiroz, M., \textbf{Xambó, A.} (eds.) (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
 \years{2004}\textbf{Xambó, A.} (2004). \emph{Herramientas De Diseño Digital / Digital Design Tools}. Madrid: Anaya-Multimedia. Editor: Eugenio Tuya Feijoo. ISBN 8441516979.
 
@@ -319,7 +327,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \noindent
 
 \years{2020}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway.\\
-\years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. \emph{Best Paper Award}.\\
+\years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 2--7. \emph{Best Paper Award}.\\
 \years{2019a}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (2019) "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME ’19)}. Porto Alegre, Brazil. pp. 216–221.\\
 \years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In \emph{Proceedings of the Web Audio Conference (WAC '18)}. Berlin, Germany.\\
 \years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In \emph{Proceedings of the Web Audio Conference (WAC '18)}. Berlin, Germany.\\
@@ -345,6 +353,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
+\years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
 \years{2018b}Skach, S., \textbf{Xambó, A.}, Turchet, L., Stolfi, A., Stewart, B., Barthet, M. (2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 80--87.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (2018). “Beacon: Exploring Physicality in Digital Performance". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 586--591.\\
 \years{2017a}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
@@ -514,6 +523,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Solo Performances}
 \noindent
 
+\years{2020}\textbf{Xambó, A.} (February 28, 2020). \emph{A situated live coding session}.  MTI CONCERT celebrating 20 years of Music, Technology and Innovation at DMU with current and past staff and PhD alumni. PACE 1, Leicester, UK\\
 \years{2019}\textbf{Xambó, A.} (January 18, 2019). \emph{Live coding with crowdsourced sounds \& a drum machine}. International Conference on Live Coding, Medialab Prado, Madrid, Spain.\\
 \years{2018d}\textbf{Xambó, A.} (November 24, 2018). \emph{A session on participatory mobile music and live coding using crowdsourced sounds}. NTNU Research Concert. Dokkhuset. Trondheim, Norway.\\
 \years{2018c}\textbf{peterMann.} (September 28, 2018). Live coding session. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
@@ -528,7 +538,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2018c}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{Web Audio Conference 2019}. Rockheim, Trondheim, Norway.\\
+\years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{Web Audio Conference 2019}. Rockheim, Trondheim, Norway.\\
 \years{2018c}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
 \years{2018b}Weisling, A., \textbf{Xambó, A.} (June 5, 2018). “Beckon". \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI '18}. Kulturhuset. Stockholm, Sweden.\\
@@ -922,7 +932,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 \subsection*{Languages}
 \noindent
 
-Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency, TOEFL iBT: 97/120 in 2009, PhD in the UK, living in the UK/USA/Norway since 2010), Norwegian (basic level, Level 1 completed in 2019), German (basic level, Level 2 completed in 1991), Italian (basic level, Level 1 completed in 1991), French (basic level, self-taught).
+Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency, TOEFL iBT: 97/120 in 2009, PhD in the UK, living abroad since 2010 (UK/USA/Norway), Norwegian (basic level, Level 1 completed in 2019), German (basic level, Level 2 completed in 1991), Italian (basic level, Level 1 completed in 1991), French (basic level, self-taught).
 
 \subsection*{Computer Skills}
 \noindent
@@ -931,10 +941,10 @@ Operating Systems: OS X, Windows and Linux desktop (Ubuntu).\\
 Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQuery, MySQL, PHP, Python, Web Audio, XML.\\
 Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version Control Systems: CVS, Git, Subversion.\\
-Music Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor).\\
+Music \& Audio Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.\\
-Hardware: Arduino, Bela.
+Hardware: Arduino, Bela, Lindos.
 
 %\vspace{1cm}
 \vfill{}
