updates late March 2020

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -523,7 +523,8 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Solo Performances}
 \noindent
 
-\years{2020}\textbf{Xambó, A.} (February 28, 2020). \emph{A situated live coding session}.  MTI CONCERT celebrating 20 years of Music, Technology and Innovation at DMU with current and past staff and PhD alumni. PACE 1, Leicester, UK\\
+\years{2020b}\textbf{Xambó, A.} (March 22, 2020). \emph{Crowdsourced Eulerisms}. Eulerroom Equinox 2020. Streaming from Sheffield, UK.\\
+\years{2020a}\textbf{Xambó, A.} (February 28, 2020). \emph{A situated live coding session}. MTI CONCERT celebrating 20 years of Music, Technology and Innovation at DMU with current and past staff and PhD alumni. PACE 1, Leicester, UK\\
 \years{2019}\textbf{Xambó, A.} (January 18, 2019). \emph{Live coding with crowdsourced sounds \& a drum machine}. International Conference on Live Coding, Medialab Prado, Madrid, Spain.\\
 \years{2018d}\textbf{Xambó, A.} (November 24, 2018). \emph{A session on participatory mobile music and live coding using crowdsourced sounds}. NTNU Research Concert. Dokkhuset. Trondheim, Norway.\\
 \years{2018c}\textbf{peterMann.} (September 28, 2018). Live coding session. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
