updates late May 2020

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -82,6 +82,7 @@ bookmarks, colorlinks, breaklinks,
 % CUSTOM
 \usepackage{microtype}
 \usepackage{eurosym}
+\usepackage{xcolor}
 %\hyphenpenalty 10000
 %\exhyphenpenalty 1000
 %\widowpenalty 10000
@@ -207,14 +208,14 @@ Role: Creator \& Director.
 
 \subsection*{Principal Investigator}
 
-\years{04/2020-12/2020}\textsc{Human Data Interaction / EPSRC grant} \\
+{
+\years{04/2020-01/2021}\textsc{Human Data Interaction / EPSRC grant} \\
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
 Role: PI. \\
 Collaborators: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; Iklectik; PHONOS; L’Ull Cec. \\
-Total Euro Amount: 10,000 \pounds
+Total Pound Amount: 10,000 \pounds
 %Candidate’s Share: 
-
 
 \years{11/2003-10/2004}\textsc{Teaching innovation project grant} \\
 Funding body: Fundació Caixa de Sabadell. \\
@@ -238,7 +239,7 @@ Total Dollar Amount: 2,517,690.00 \$
 
 \years{2019}\textsc{Web Audio Conference 2019} \\
 Role: Conference chair. \\
-Total Fundraised Norwegian Krone Amount: 120,000 NOK (Approx. 12,000 \euro)\\[.1cm]
+Total Fundraised Norwegian Krone Amount: 120,000 NOK (approx. 12,000 \euro)\\[.1cm]
 \years{2017--2018}\textsc{Female Laptop Orchestra + WoNoMute +YSWN + Sonora: seminar and concert at SARC} \\
 Role: Co-organizer and participant of the event. \\
 Total Fundraised British Pound Amount: 2,000 \textsterling\\[.1cm]
@@ -312,8 +313,15 @@ Candidate’s Share: 50\% (1,500 \euro)
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
 
+
+\subsection*{Peer-Reviewed Journal Special Issues}
+\noindent
+\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). Web Audio Conference Special Issue. \emph{Journal of Audio Engineering Society}, volume 68, issue TBD.
+
+
 \subsection*{Journal Articles}
 \noindent
+{\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. Submitted to the \emph{Journal of Audio Engineering Society}. for the \emph{Web Audio Conference Special Issue}.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
@@ -321,12 +329,13 @@ Candidate’s Share: 50\% (1,500 \euro)
 \years{2017b}Jewitt, C., Price, S., \textbf{Xambó, A.} (2017). “Conceptualising and Researching the Body in Digital Contexts: Towards New Methodological Conversations Across the Arts and Social Sciences". \emph{Qualitative Research}, 17(1), pp. 37--53.\\
 \years{2017a}Jewitt, C., \textbf{Xambó, A.}, Price, S. (2017). “Exploring Methodological Innovation in the Social Sciences: The Body in Digital Environments and the Arts". \emph{International Journal of Social Research Methodology},  20(1), pp. 105--120.\\
 \years{2013b}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C., Laney, R. (2013). “Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{ACM Transactions on Computer-Human Interaction}, 20(6), pp. 36:1--36:34.\\
-\years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E., Herrera, P. (2013). “Semantic Audio Content-based Music Recommendation and Visualization based on User Preference Examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.\\[1.2cm]%hack
+\years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E., Herrera, P. (2013). “Semantic Audio Content-based Music Recommendation and Visualization based on User Preference Examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.%\\[1.2cm]%hack
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-\years{2020}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway.\\
+{\years{2020b}\textbf{Xambó, A.}, Roma, G. (2020) ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. Accepted to appear in \emph{Proceedings of the New Interfaces for Musical Expression (NIME '20)}. Birmingham, UK.}\\
+\years{2020a}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway.\\
 \years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 2--7. \emph{Best Paper Award}.\\
 \years{2019a}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (2019) "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME ’19)}. Porto Alegre, Brazil. pp. 216–221.\\
 \years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In \emph{Proceedings of the Web Audio Conference (WAC '18)}. Berlin, Germany.\\
@@ -353,7 +362,9 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
-\years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
+\years{2019b}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
+\years{2019a}Støckert, R., Jensenius, A.R., \textbf{Xambó, A.}, Brandtsegg, Ø. (2019). ``A Case Study in Learning Spaces for Physical-Virtual Two-Campus Interaction''. In \emph{Proceedings of the European University Information Systems (EUNIS)}. 
+Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
 \years{2018b}Skach, S., \textbf{Xambó, A.}, Turchet, L., Stolfi, A., Stewart, B., Barthet, M. (2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 80--87.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (2018). “Beacon: Exploring Physicality in Digital Performance". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 586--591.\\
 \years{2017a}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
@@ -366,6 +377,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Position \& Workshop Papers}
 \noindent
 
+\years{2020}Fasciani, S., Jensenius, A.R., Støckert, R., \textbf{Xambó, A.} (2020) ``The MCT Portal: An Infrastructure, a Laboratory and a Pedagogical Tool''. Researchers’ Colloquium on Low Latency Streaming in Music Learning and Teaching. Royal Conservatoire of Scotland, Glasgow, UK.\\
 \years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (2017) “Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". 2017 Co-Creation Workshop at the International Conference on Computational Creativity. Atlanta, GA, USA.\\ 
 \years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a Taxonomy for Video Analysis on Collaborative Musical Tabletops". In \emph{BCS HCI 2012 Workshop on video analysis techniques for HCI}. Birmingham, UK.\\
 \years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). ``Collaborative Music Interaction on Tabletops: An HCI Approach'''. In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
@@ -461,7 +473,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Workshops}
 \noindent
 
-\years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
+\years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
 \years{2019b}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Overholt, D., Pellerin, G., Bukvic, I.I., Fiebrink, R., Schramm, R. (June 3, 2019). “Open Research Strategies and Tools in the NIME Community". \emph{NIME '19}. Centro cultural, UFRGS, Porto Alegre, Brazil.\\
 \years{2019a} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
 \years{2018b} \textbf{Xambó, A.} (July 12--13, 2018). “Creative Audio Programming". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies.\\
@@ -540,7 +552,9 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Collaborative Performances}
 \noindent
 \years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{Web Audio Conference 2019}. Rockheim, Trondheim, Norway.\\
-\years{2018c}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
+\years{2018e}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
+\years{2018d}Martin, C.M., Lesteberg, M., Jawad, K., Aandahl, E., \textbf{Xambó, A.} (August 29, 2018). ``Stillness under Tension''. \emph{MCT Open Seminar}. MCT Portal, NTNU / UiO, Trondheim / Oslo.\\   
+\years{2018c}Martin, C.M., \textbf{Xambó, A.}, Visi, F., Morreale, F., Jensenius, A.R. (June 5, 2018). ``Stillness under Tension''. \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\   
 \years{2018b}Weisling, A., \textbf{Xambó, A.} (June 5, 2018). “Beckon". \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI '18}. Kulturhuset. Stockholm, Sweden.\\
 \years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". \emph{AM '17}. Oxford House Theatre. London, UK. \\
@@ -744,16 +758,17 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \section*{Supervision  \& Mentoring}
 \noindent
 
-\years{01/2020--present}Master thesis supervisor of Karolina Jawad (MCT, NTNU). From this work, there is a forthcoming publication at ICLI '20.\\
+\years{01/2020--present}Master thesis supervisor of Karolina Jawad (MCT, NTNU). From this work, we have published at ICLI '20 (see Peer-Reviewed Conference Papers).\\
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
 \years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru (Computer Science, QMUL). Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
-\years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other new members, such as Jyoti Narang.\\
+\years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
 \section*{External Examining}
 \noindent
 
+\years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo.\\
 \years{08/2019}External MSc examiner, Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo.\\
 \years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.\\
 
@@ -834,11 +849,12 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Conference Reviewer}
 \noindent
 
+\years{2020}\emph{Network Music Festival} (2020).\\
 \years{2019b}\emph{Tenth Workshop on Ubiquitous Music} (2020).\\
 \years{2019a}\emph{Audio Mostly} (2019).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018--2019}\emph{International Society for Music Information Retrieval Conference} (2018--2019).\\
+\years{2018--2020}\emph{International Society for Music Information Retrieval Conference} (2018--2020).\\
 \years{2017--2019}\emph{ACM Creativity and Cognition} (2017, 2019).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
@@ -851,6 +867,13 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
 \years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2020).\\
 \years{2011--2019}\emph{New Interfaces for Musical Expression} (2011--2019).
+
+\subsection*{Conference Meta-Reviewer}
+\noindent
+
+\years{2020}\emph{New Interfaces for Musical Expression} (2020).\\
+\years{2019}\emph{Web Audio Conference} (2019).
+
 
 \subsection*{Journal Reviewer}
 \noindent
@@ -869,7 +892,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Book Reviewer}
 \noindent
 
-\years{2020}\emph{Routledge}.\\
+\years{2020}\emph{Routledge}.
 
 \subsection*{Panelist}
 \noindent
@@ -908,6 +931,8 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 
 \subsection*{Entrepreneurship}
 \noindent
+\years{01/2019--05/2020}\emph{WebAudioConf.com} \\
+Usability supervisor and project coordinator of a sustainable website that hosts the online proceedings of the Web Audio Conference.\\
 \years{08/2018--12/2019}\emph{Women Nordic Music Technology (WoNoMute)}, NTNU, Trondheim, Norway. \\
 Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU in collaboration with University of Oslo (UiO) that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the curation and organization of a monthly seminar series of talks, the creation of an online archive and generation of related content to give more visibility to the work of women in music tech.\\
 \years{2009--present}\emph{Carpal Tunnel}, Barcelona, Spain.\\
@@ -945,6 +970,7 @@ Version Control Systems: CVS, Git, Subversion.\\
 Music \& Audio Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.\\
+Learning Platforms: Blackboard, Canvas.\\
 Hardware: Arduino, Bela, Lindos.
 
 %\vspace{1cm}
